# Project-Ilanoria

./: .env.example  .gitignore  Cargo.toml  README.md  README.tr.md
src/: main.rs
src/application/: mod.rs
src/application/filter/: filter.rs  loader.rs  mod.rs  types.rs
src/application/health/: worker.rs
src/application/indexer/: config.rs  mod.rs  types.rs
src/application/indexer/client/: mod.rs  pumpfun.rs  raydium.rs
src/application/indexer/indexer/: log_bus.rs  mod.rs  shards.rs  stats.rs
src/application/pricing/: config.rs  mod.rs  price_fetcher.rs  types.rs
src/infrastructure/: mod.rs
src/infrastructure/blockchain/: config.rs  mod.rs  types.rs
src/infrastructure/blockchain/bloom/: client.rs  mod.rs  types.rs  ws.rs
src/infrastructure/blockchain/graphql/: client.rs  types.rs
src/infrastructure/blockchain/rpc/: client.rs  mod.rs
src/infrastructure/database/: mod.rs
src/infrastructure/database/redis/: client.rs  commands.rs  mod.rs  types.rs
src/infrastructure/logging/: mod.rs
src/interfaces/: mod.rs
src/interfaces/bot/: mod.rs
src/interfaces/bot/core/: bloom_listener.rs  mod.rs  update_bus.rs  user_logger.rs
src/interfaces/bot/data/: logs.rs  mod.rs  storage.rs  types.rs
src/interfaces/bot/handlers/: callbacks.rs  mod.rs  settings.rs  start.rs  tasks.rs  text.rs  trade.rs  wallets.rs
src/interfaces/bot/tasks/: discord.rs  mod.rs  scraper.rs  state.rs  tg.rs
src/interfaces/bot/ui/: keyboards.rs  menu.rs  mod.rs  states.rs
src/interfaces/bot/user/: client.rs
src/interfaces/bot/utils/: bloom.rs  messages.rs  mod.rs
src/interfaces/console/: console.rs  menu.rs
