[package]
name = "project-ilanoria"
version = "0.1.0"
edition = "2024"
description = "Project Ilanoria"

[dependencies]
teloxide = { version = "0.12", features = ["macros", "ctrlc_handler"] }
tokio = { version = "1", features = ["full", "sync"] }
log = "0.4"
pretty_env_logger = "0.5"
dotenv = "0.15"
redis = { version = "0.26", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5.1"
solana-sdk = "2.3.0"
solana-rpc-client = "2.3.6"
solana-rpc-client-api = "2.3.6"
colored = "2.2.0"
unicode-width = "0.1"
reqwest = { version = "0.12.12", features = ["json", "multipart"] }
chrono = "0.4.39"
anyhow = "1.0.90"
gag = "1.0.0"
crossterm = "0.27"
grammers-client = { git = "https://github.com/Lonami/grammers" }
grammers-session = { git = "https://github.com/Lonami/grammers" }
grammers-tl-types = { git = "https://github.com/Lonami/grammers" }
regex = "1.10.5"
lazy_static = "1.5.0"
async-trait = "0.1.80"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "7.0.0", features = ["no-entrypoint"] }
solana-account-decoder = "2.3.0"
uuid = { version = "1.8.0", features = ["v4"] }

solana-streamer-sdk = "0.4.13"
solana-program = "2.3.0"
solana-transaction-status = "2.3.6"
solana-hash = "2.3.0"
solana-entry = "2.3.6"
solana-rpc-client-nonce-utils = "2.3.6"
solana-perf = "2.3.6"
solana-metrics = "2.3.6"
spl-token-2022 = { version = "8.0.0", features = ["no-entrypoint"] }
borsh = { version = "1.5.3", features = ["derive"] }
isahc = "1.7.2"
futures = "0.3.31"
futures-util = "0.3.31"
base64 = "0.22.1"
rand = "0.9.0"
bincode = "1.3.3"
yellowstone-grpc-client = { version = "8.0.0" }
yellowstone-grpc-proto = { version = "8.0.0" }
tonic = { version = "0.12.3", features = ["tls", "tls-roots", "tls-webpki-roots"] }
rustls = { version = "0.23.23", features = ["ring"] }
rustls-native-certs = "0.8.1"
tokio-rustls = "0.26.1"
core_affinity = "0.8"
tracing = "0.1.41"
thiserror = "2.0.11"
once_cell = "1.20.3"
prost = "0.13.5"
prost-types = "0.13.5"
num_enum = "0.7.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
hex = "0.4.3"
bytemuck = { version = "1.4.0" }
arrayref = "0.3.6"
borsh-derive = "1.5.5"
indicatif = "0.18.0"
solana-system-interface = { version = "1.0.0", features = ["bincode"] }
fnv = "1.0.7"
dashmap = "6.1.0"
clru = "0.6"
smallvec = "1.15.1"
parking_lot = "0.12"
arc-swap = "1.7"
sha2 = "0.10"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
url = "2.5.2"
